fix bug in MkDocs config file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Fujitsu SecDocs SDO Web Services API
+site_name: Fujitsu SecDocs Web Services API
 site_url: https://fujitsu-dsps.github.io/secdocs/
-site_description: Fujitsu SecDocs SDO Web Services API
+site_description: Fujitsu SecDocs Web Services API
 site_author: SecDocs Team
 
 repo_name: GitHub
